--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
